# rust-tapi-chronicles

./: .gitignore  README.md
apache_log_parser/: Cargo.toml  README.md
apache_log_parser/src/: main.rs
linux_log_ip_parser/: Cargo.toml  README.md
linux_log_ip_parser/src/: main.rs
robot_mpsc/: Cargo.toml  README.md
robot_mpsc/config/: config.yaml
robot_mpsc/src/: main.rs
shell_protocol/: Cargo.toml  README.md
shell_protocol/src/: lib.rs
