[package]
name = "shell_protocol"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "shell_protocol_tcp_client"
path = "src/bin/tcp_client.rs"

[[bin]]
name = "shell_protocol_tcp_server"
path = "src/bin/tcp_server.rs"

[[bin]]
name = "shell_protocol_udp_client"
path = "src/bin/udp_client.rs"

[[bin]]
name = "shell_protocol_udp_server"
path = "src/bin/udp_server.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = { version = "2.0", features = ["serde", "derive"] }
